# ai-git-commit-gen

./: .gitignore  DEPLOY_TO_PYPI.md  LICENSE  MANIFEST.in  README.md  TESTING.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_tool.sh
.github/workflows/: ci.yml  publish.yml
src/git_commit_ai/: __init__.py  cli.py  git_utils.py  llm.py  main.py  models.py  prompts.py
tests/: __init__.py  test_cli.py  test_git_utils.py  test_llm.py
