[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-git-commit-gen"
version = "0.1.1"
description = "AI-powered git commit message generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Yogesh Choudhari", email = "yogigurjar73542@gmail.com" }
]
keywords = ["git", "commit", "ai", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
gcai = "git_commit_ai.main:app"
ai-git-commit = "git_commit_ai.main:app"

[project.urls]
Homepage = "https://github.com/yogichoudhari/ai-git-commit-gen"
Repository = "https://github.com/yogichoudhari/ai-git-commit-gen"
Issues = "https://github.com/yogichoudhari/ai-git-commit-gen/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/git_commit_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"